--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -4,14 +4,14 @@ http://localhost api.villeto.com {
     tls villetosystems@gmail.com
     encode zstd gzip
     # /docs/* will be proxied to API, but /docs prefix is stripped before proxying
-    handle_path /api/* {
-        reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
-    }
+    # handle_path /api/* {
+    #     reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
+    # }
 
     # /worker/* -> worker service (prefix stripped)
-    handle_path /worker/* {
-        reverse_proxy http://{$UPSTREAM_WORKER}:3001
-    }
+    # handle_path /worker/* {
+    #     reverse_proxy http://{$UPSTREAM_WORKER}:3001
+    # }
 
     # fallback: everything else -> API (keeps path as-is)
     handle {
