--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -4,41 +4,48 @@ FROM node:22-bullseye-slim AS builder
 # Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# install ps (procps) so watcher tools that spawn `ps` work
+# Install necessary tools
 RUN apt-get update \
- && apt-get install -y --no-install-recommends procps \
- && rm -rf /var/lib/apt/lists/*
+    && apt-get install -y --no-install-recommends procps \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy package.json and package-lock.json or pnpm-lock.yaml to the working directory
+# Copy package files and install dependencies
 COPY package*.json ./
 COPY pnpm-lock.yaml ./
 
-# install pmpm as the package manager
+# Enable and prepare pnpm
 RUN corepack enable
 RUN corepack prepare pnpm@latest --activate
-# Install the application dependencies
+
+# Install dependencies
 RUN pnpm install
 
 # Copy the rest of the application files
 COPY . .
 
-# Build the NestJS application
-RUN pnpm run build worker
+# Build each application in the monorepo
+RUN pnpm run build:worker
 
+# Production stage
 FROM node:22-bullseye-slim AS prod
 
 # Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# install pmpm as the package manager
+# Enable and prepare pnpm
 RUN corepack enable
 RUN corepack prepare pnpm@latest --activate
 
-# Copy the app build from the build stage
-COPY --from=builder /usr/src/app ./
+# Copy built files and production dependencies from the builder stage
+COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/package.json ./
+COPY --from=builder /usr/src/app/pnpm-lock.yaml ./
+
+# Install production dependencies
+RUN pnpm install --prod
 
 # Expose the application port
 EXPOSE 3001
 
 # Command to run the application
-CMD ["node", "./dist/apps/worker/main"]
+CMD ["node", "dist/apps/worker/main"]
