--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -134,10 +134,10 @@ jobs:
             # Deploy to the inactive environment
             cd $INACTIVE_DIR
             docker compose -f prod-docker-compose.yaml pull
-            docker compose -f prod-docker-compose.yaml up -d --build
+            docker compose -f prod-docker-compose.yaml up -d --no-build
 
             # Wait for services to start
-            sleep 90
+            sleep 30
 
             # Test the new environment
             curl -f http://${{ secrets.VPS_HOST }}:3000 || exit 1
