--- a/old.prod-docker-compose.yaml
+++ b/old.prod-docker-compose.yaml
@@ -23,48 +23,76 @@ services:
       - web
   api-gateway-blue:
     image: ghcr.io/villetostream/villetostream/villeto-monolith/api-gateway:blue
+    build: 
+      context: .
+      dockerfile: ./apps/api-gateway/Dockerfile
+      target: prod
     container_name: api-gateway-blue
     restart: always
     depends_on:
       - worker-blue
       - worker-green
+    command: pnpm run start api-gateway
     env_file:
       - $PWD/../.env
     ports:
       - '3000:3000'
+    volumes:
+      - .:/usr/src/app
     networks:
       - web
   api-gateway-green:
     image: ghcr.io/villetostream/villetostream/villeto-monolith/api-gateway:green
+    build: 
+      context: .
+      dockerfile: ./apps/api-gateway/Dockerfile
+      target: prod
     container_name: api-gateway-green
     restart: always
     depends_on:
       - worker-blue
       - worker-green
+    command: pnpm run start api-gateway
     env_file:
       - $PWD/../.env
     ports:
       - '3001:3000'
+    volumes:
+      - .:/usr/src/app
     networks:
       - web
   worker-blue:
     image: ghcr.io/villetostream/villetostream/villeto-monolith/worker:blue
+    build: 
+      context: .
+      dockerfile: ./apps/worker/Dockerfile
+      target: prod
     container_name: worker-blue
     restart: always
+    command: pnpm run start worker
     env_file:
       - $PWD/../.env
     ports:
       - '3002:3001'
+    volumes:
+      - .:/usr/src/app
     networks:
       - web
   worker-green:
     image: ghcr.io/villetostream/villetostream/villeto-monolith/worker:green
+    build: 
+      context: .
+      dockerfile: ./apps/worker/Dockerfile
+      target: prod
     container_name: worker-green
     restart: always
+    command: pnpm run start worker
     env_file:
       - $PWD/../.env
     ports:
       - '3003:3001'
+    volumes:
+      - .:/usr/src/app
     networks:
       - web
 
