--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -145,7 +145,9 @@ jobs:
             # Switch traffic
             echo "${{ steps.set-env.outputs.INACTIVE_ENV }}" > /opt/active_env
             echo "Active environment is now: $(cat /opt/active_env)"
-            docker restart caddy
+            
+            # Run the script to update Caddy's environment variables
+            bash /opt/update_caddy_env.sh
 
             # Clean up old containers
             docker system prune -f
