--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -3,21 +3,21 @@ api.villeto.com {
    encode zstd gzip
 
    # reverse proxy to service on the Docker network
-   reverse_proxy villeto:3000
+   reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
 
 }
 
 
-# http://localhost {
-#     # Local testing configuration
-#     encode zstd gzip
-#     handle {
-#         reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
-#     }
-#     log {
-#         output file /data/local-access.log
-#     }
-# }
+http://localhost {
+    # Local testing configuration
+    encode zstd gzip
+    handle {
+        reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
+    }
+    log {
+        output file /data/local-access.log
+    }
+}
 
 # https://api.villeto.com {
 #     # Production configuration
