--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -3,7 +3,12 @@ api.villeto.com {
    encode zstd gzip
 
    # reverse proxy to service on the Docker network
-   reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
+    handle {
+        reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
+    }
+    log {
+        output file /data/local-access.log
+    }
 
 }
 
