--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -1,38 +1,17 @@
 api.villeto.com {
-   tls villetosystems@gmail.com
-   encode zstd gzip
+    tls villetosystems@gmail.com
+    encode zstd gzip
 
-   # reverse proxy to service on the Docker network
-    handle {
-        reverse_proxy {env.UPSTREAM_API_GATEWAY}:3000
-    }
+    # proxy to container by compose service name on the 'web' network
+    reverse_proxy api-gateway-blue:3000
+
     log {
         output file /data/local-access.log
     }
-
 }
-
 
 http://localhost {
-    # Local testing configuration
     encode zstd gzip
-    handle {
-        reverse_proxy {env.UPSTREAM_API_GATEWAY}:3000
-    }
-    log {
-        output file /data/local-access.log
-    }
+    reverse_proxy api-gateway-blue:3000
+    log { output file /data/local-access.log }
 }
-
-# https://api.villeto.com {
-#     # Production configuration
-#     tls villetosystems@gmail.com
-#     encode zstd gzip
-#     handle {
-#         reverse_proxy http://{$UPSTREAM_API_GATEWAY}:3000
-#     }
-#     log {
-#         output file /data/dev-access.log
-#     }
-# }
-
