--- a/prod-docker-compose.yaml
+++ b/prod-docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - "80:80"     # HTTP (ACME http-01)
       - "443:443"   # HTTPS
     volumes:
-      - $PWD/conf:/etc/caddy    # your Caddy config
+      - $PWD/caddy:/etc/caddy    # your Caddy config
       - $PWD/site:/srv          # serve static files from here
       - caddy_data:/data     # certs, logs, etc (persisted)
       - caddy_config:/config # caddy internal config
