chore: containerize the app

--- a/Caddyfile
+++ b/Caddyfile
@@ -55,3 +55,10 @@ http://localhost {
 #     }
 # }
 
+http://localhost {
+    encode zstd gzip
+    reverse_proxy api-gateway-blue:3000
+    log {
+        output file /data/local-access.log
+    }
+}
